--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.4.3",
+    "react-search-box": "^2.0.2"
   },
   "devDependencies": {
     "typescript": "3.3.3"
