--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "react": "16.8.6",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "16.8.6",
     "react-scripts": "^3.4.3",
     "react-search-box": "^2.0.2"
