--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "^3.4.3",
