--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "16.8.6",
     "react-scripts": "^3.4.3",
-    "react-search-box": "^2.0.2"
+    "react-search-box": "^2.0.2",
+    "react-spring": "^8.0.27"
   },
   "devDependencies": {
     "typescript": "3.3.3"
