--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "copy-to-clipboard": "^3.3.1",
     "react": "16.8.6",
     "react-bootstrap": "^1.3.0",
     "react-dom": "16.8.6",
