--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@tippy.js/react": "^3.1.1",
     "bootstrap": "^4.5.2",
     "react": "16.8.6",
     "react-bootstrap": "^1.3.0",
